src/index.css
/* ... */
.navBarFix {
  height: 80px;
  background-color: rgb(26, 26, 26);
}

.home {
  margin: auto;
  z-index: 0;
}

.developers {
  background-color: rgba(26, 26, 26, .9);
  -webkit-box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  -moz-box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  padding-bottom: 60px;
}

.technologies {}

.thanks {
  background-color: rgba(26, 26, 26, .9);
}

.footer {
  background-color: rgba(26, 26, 26, .9);
  padding: 20px;
  text-align: center;
}

.navTextBox {
  margin-top: 29px;
  margin-right: 26px;
}

.hamburger {
  margin-top: 32px;
  margin-right: 26px;
}

.navText {
  font-size: 16px;
  margin: 12px;
  opacity: .7;
  transition: 0.2s;
}

.logoAndText {
  margin-top: 15px;
  font-size: 20px;
  margin-left: 26px;
  line-height: 50px;
  display: flex;
  flex-direction: row;
}

.logoText {
  margin-left: 20px;
  max-lines: 2;
  max-height: 48px;
  overflow: hidden;
  min-width: 74px;
}

.navText:hover {
  opacity: 1;
  cursor: pointer;
}

.highlight {
  opacity: 1;
  font-weight: bold;
}

.navDropDownContainer {
  transition: .5s;
  color: white;
  width: 100%;
  background-color: rgb(65, 65, 65);
  position: fixed;
  top: -120px;
  z-index: 1;
}

.navDropDown {
  margin-top: 16px;
  margin-bottom: 20px;
}

.navOpen {
  transform: translateY(200px);
  -webkit-box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  -moz-box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
}

.navDropDownItem {
  font-size: 18px;
  margin-left: 20px;
  margin-top: 10px;
}

.navDropDownItem:hover {
  cursor: pointer;
}

.darkBgTitle {
  text-align: center;
  margin-top: 40px;
}

.lightBgTitle {
  text-align: center;
  margin-top: 40px;
  color: rgba(26, 26, 26, .9);
}

.developerCardContainer {
  width: 90vw;
  max-width: 1000px;
  margin: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
}

.cardContainerMobile {
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.innerBio {
  color: rgb(196, 196, 196);
  margin: 10px;
  margin-top: 0px;
  padding-top: 10px;
  margin-bottom: 20px;
}

.developerCard {
  font-size: 14px;
  min-height: 500px;
  width: 260px;
  min-width: 260px;
  margin: 10px;
  margin-top: 30px;
  background-color: rgb(61, 61, 61);
  display: flex;
  flex-direction: column;
  background-color: rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  -moz-box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
  box-shadow: 7px 7px 23px -13px rgba(0, 0, 0, 0.53);
}

.imageHolder {
  width: 100%;
  height: 300px;
}

.infoContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-left: 16px;
  padding-right: 16px;
  min-height: 210px;
}

.infoContainerFix {
  min-height: 0;
}

.infoContainer h3 {
  text-align: center;
  margin-top: 16px;
  margin-bottom: 0px;
  font-size: 20px;
}

.infoContainer p {
  text-align: center;
  color: rgb(196, 196, 196);
  margin: 0;
}

.iconAndButtonSection {
  margin-top: 6px;
}

.cardIconRow {
  margin: auto;
  margin-bottom: 10px;
  display: flex;
  flex-direction: row;
  width: 150px;
  justify-content: space-between;
}

.cardIconRow a {
  color: white;
}

.cardIconRow svg {
  transition: 0.15s
}

.cardIconRow svg:hover {
  cursor: pointer;
  transform: scale(1.1);
}

.modalButton {
  text-align: center;
  width: 80px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
  padding: 2px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  border: solid 1px rgba(255, 255, 255, .4);
  border-radius: 20px;
  transition: 0.25s;
}

.modalButton:hover {
  cursor: pointer;
  width: 100px;
  border-color: rgba(255, 255, 255, 1)
}

.Justina-Vickers {
  background-image: url('./images/classmates/JustinaVickers.jpg');
  background-size: cover;
  transition: 0.25s;
}

.Justina-Vickers:hover {
  background-image: url('./images/classmates/JustinaVickers_Fun.jpg');
}

.Justina-Vickers.smallImage {
  background-image: url('./images/classmates/JustinaVickers_Fun.jpg')
}

.Warner-Carpenter {
  background-image: url('./images/classmates/WarnerCarpenter.jpg');
  background-size: cover;
  transition: 0.25s;
}

.Warner-Carpenter:hover {
  background-image: url('./images/classmates/WarnerCarpenter_Fun.jpg');
}

.Warner-Carpenter.smallImage {
  background-image: url('./images/classmates/WarnerCarpenter_Fun.jpg');
}

.Kirren-Covey {
  background-image: url('./images/classmates/KirrenCovey.jpg');
  background-size: cover;
  transition: 0.25s;
}

.Kirren-Covey:hover {
  background-image: url('./images/classmates/KirrenCovey_Fun.jpg');
}

.Kirren-Covey.smallImage {
  background-image: url('./images/classmates/KirrenCovey_Fun.jpg');
}

.Mo-Silvera {
  background-image: url('./images/classmates/MoSilvera.jpg');
  background-size: cover;
  transition: 0.25s;
}

.Mo-Silvera:hover {
  background-image: url('./images/classmates/MoSilvera_Fun.jpg');
}

.Mo-Silvera.smallImage {
  background-image: url('./images/classmates/MoSilvera_Fun.jpg');
}

.Katerina-Freeman {
  background-image: url('./images/classmates/KaterinaFreeman.jpg');
  background-size: cover;
  transition: 0.25s;
}

.Katerina-Freeman:hover {
  background-image: url('./images/classmates/KaterinaFreeman_Fun.jpg');
}

.Katerina-Freeman.smallImage {
  background-image: url('./images/classmates/KaterinaFreeman_Fun.jpg');
}

.Panya-Farnette {
  background-image: url('./images/classmates/PanyaFarnette.jpg');
  background-size: cover;
  transition: 0.25s;
}

.Panya-Farnette:hover {
  background-image: url('./images/classmates/PanyaFarnette_Fun.jpg');
}

.Panya-Farnette.smallImage {
  background-image: url('./images/classmates/PanyaFarnette_Fun.jpg');
}

.Abbey-Brown {
  background-image: url('./images/classmates/AbbeyBrown.jpg');
  background-size: cover;
  transition: 0.25s;
}
/* ... */

